tests/NormalTests/paczka1/fuzzy1/21612676.err
Error in line 1: dJFV5 A47 10,9
Error in line 4: 5643zn A47 41,9
Error in line 6: 5643zn S549 11,5
Error in line 15: 5643zn A233 56,5
Error in line 17: A935 S549 92,7
Error in line 31: 5643zn S549 25,9
Error in line 38: dJFV5 S549 19,7
